fix: alignment issue with right icon in card view in entities page

--- a/src/scss/filejet-scss/entities/_entities.scss
+++ b/src/scss/filejet-scss/entities/_entities.scss
@@ -147,6 +147,9 @@
         border-bottom: 3px solid lightgrey;
     }
 }
+.arrow-icon-min-width {
+    min-width: 20px;
+}
 
 .formation-type-min-width {
     min-width: 165px !important;
